--- a/backend/api_agenda/composer.json
+++ b/backend/api_agenda/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "tymon/jwt-auth": "dev-develop#f57a0ff33f20d2a0c3ebc9e13ce8382a83f921a8"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
