--- a/frontend/agenda-app/package.json
+++ b/frontend/agenda-app/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
