--- a/frontend/agenda-app/package.json
+++ b/frontend/agenda-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@auth0/angular-jwt": "^2.0.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
